Fixup server communication error check and integration config

--- a/servers/node/h2gcnotify/Makefile
+++ b/servers/node/h2gcnotify/Makefile
@@ -1,3 +1,9 @@
+destdir=$(HOME)/.h2gc/integrations
 
+all:
+
+install:
+	@echo "install"
+	cp integrations/* "$(destdir)"
 drop:
 	mongo logdb --eval "db.dropDatabase()"
